1609992490 | 32 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/messageoverlay.html,  M resources/webinterface/dashboard/notificationtoast.html,  M resources/webinterface/dashboard/scenegraphtest.html,  M resources/webinterface/dashboard/settings_desktop.html,  M resources/webinterface/dashboard/systemreportviewer.html,  M resources/webinterface/dashboard/systemui.html,  M resources/webinterface/dashboard/vrmonitor.html,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libengine2_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libpanorama_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/librenderingpipelines_strings.txt,  M tools/steamvr_environmen
https://steamdb.info/patchnotes/6048431/

--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
@@ -576,6 +576,8 @@
 		"VR_Avatar_Touch_Desc"			"Touch controllers for the Oculus Rift."
 		"VR_Avatar_Rift_S"				"Rift S Controllers"
 		"VR_Avatar_Rift_S_Desc"			"Touch controllers for the Oculus Rift S."
+		"VR_Avatar_Quest_2"				"Quest 2 Controllers"
+		"VR_Avatar_Quest_2_Desc"		"Touch controllers for the Oculus Quest 2."
 		"VR_Avatar_Hands_Mittens"		"Mittens"
 		"VR_Avatar_Hands_Mittens_Desc"	"Hands in mittens. Super cozy."
 		"VR_Avatar_Hands_Fingers"		"Hands"
